# receipt-ocr

./: .gitignore  Dockerfile  README.md  config.yaml  docker-compose.yml  pyproject.toml  schema.json
app/: main.py  worker.py
data/: cord_dataset.py  shard_dataset.py  storage.py
demo/: index.html
docs/: index.html
eval/: batch_eval.py  compare_models.py  comparison_results.json  metrics.py  run_eval.py
eval/models/: base.py  claude_runner.py  donut_cord.py  qwen2vl.py  trocr.py
scripts/: create_shards.py  fetch_public.py
tests/: test_api.py  test_data.py  test_metrics.py  test_train.py
train/: donut_dataset.py  finetune_donut.py
